--- a/pages/pills.html
+++ b/pages/pills.html
@@ -15,8 +15,8 @@
     <div class="container">
         <div class="header">
             <div class="nav">
-                <a href="/index.html">الرئيسية</a>
-                <a href="/pages/pills.html">الفواتير</a>
+                <a href="/index.html">البيع</a>
+                <a href="/pages/pills.html"><input class="nav_selected nav_pro" type="button" value="الفواتير"></a>
                 <a href="/pages/prodoct.html">المنتجات</a>
             </div>
             <div class="logo">
@@ -25,7 +25,7 @@
         </div>
 <div style="height: 20px;"></div>
         <div class="bodycon extra centerer">
-        
+            
             <div class="homePill">
                 <div class="homePill_header">
 
