--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input class="small_input text_intput" type="number" name="price" id="add_price" readonly>
                 </div>
                 <div class="input_line">
-                    <input onclick="add_item()" class="submit_button" type="button" name="" id="" value="اضافة المنتج">
+                    <input onclick="add_item()" class="submit_button" type="button" name="" id="" value="اضافة">
                 </div>
 
             </div>
