--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <div>
                         <label class="costumers" for="overAll">المجموع:</label>
                         <input type="number" name="overAll" class="text_intput" id="overAll" readonly>
+                        <span>ريال</span>
 
                         </input>
                     </div>
@@ -73,16 +74,9 @@
                 <hr>
                 <div class="homePill_content">
                     <div>
-                    <table class="pill_table_titles">
-                        <tr>
-                            <th>المنتج</th>
-                            <th>العدد</th>
-                            <th>السعر</th>
-                            <th>المجموع</th>
-                            <th>---</th>
-                        </tr>
-                        <table class="pill_table" id="cart">
-                        </table>
+                    <table class="pill_table_titles" id="cart">
+
+
                     </table>
                 </div>
             </div>
